feat: Add sentry logging for errors

--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,8 @@ DATABASE_PASSWORD = '<your_db_password>'
 DATABASE_HOST = '<the_database_host>'
 GOOGLE_MAPS_API_KEY = '<your_map_key>'
 ADDRESS_VALIDATION_ENABLED = false
+PROJECT_SECRET_KEY = '<your_project_secret_key>'
+SENTRY_PUBLIC_KEY_DSN = '<your_sentry_project_public_key>'
+SENTRY_SUFFIX_DSN = '<your_sentry_suffix_dsn>'
+SENTRY_PROJECT_ID = <your_sentry_project_id>
+SENTRY_ENABLED = False
