feat: add .env changes

--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,11 @@
 DATABASE_NAME = 'hospital'
 DATABASE_USER = '<your_db_user>'
 DATABASE_PASSWORD = '<your_db_password>'
-DATABASE_HOST = '<the_database_host>'
+DATABASE_HOST = 'db'
+MYSQL_ROOT_PASSWORD = '<your_db_root_password>' // For the db container root user
+MYSQL_DATABASE = 'hospital'
+MYSQL_USER = '<user_for_the_db_for_the_db_container>'
+MYSQL_PASSWORD= '<password_for_the_db_user_for_the_db_container>'
 GOOGLE_MAPS_API_KEY = '<your_map_key>'
 ADDRESS_VALIDATION_ENABLED = false
 PROJECT_SECRET_KEY = '<your_project_secret_key>'
